Adding final SOSP video

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -74,7 +74,8 @@
                   utilization, reducing the overall number of cores
                   needed to serve the same workloads and consequently
                   better utilizing the data center resources.},
-   code = {https://github.com/maxdml/psp}
+   code = {https://github.com/maxdml/psp},
+   video={https://youtu.be/ivJTugj5S0c}
    }
 
 @InProceedings{sowmya_sosp_prism,
