--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -81,7 +81,7 @@
 @InProceedings{sowmya_sosp_prism,
   author = {Sowmya Dharanipragada and Shannon Joyner and Matthew Burke
                   and Adriana Szekeres and Jacob Nelson and Irene
-                  Zhang and Dan Ports},
+                  Zhang and Dan R. K. Ports},
   month =         10,
   year =          2021,
   booktitle = sosp,
