new blog post on post demikernel

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -14,6 +14,36 @@
 @string{submission = "Submission"}
 @string{asplos = "Proceedings of the International Conference on Architectural Support for  Programming Languages and Operating Systems (ASPLOS)"}
 @string{acsac = "Annual Computer Security Applications Conference (ACSAC)"}
+@string{hotcarbon = "Proceedings of the Workshop on Sustainable Computer Systems Design and Implementation (HotCarbon)"}
+
+
+@InProceedings{treehouse_hotcarbon,
+  author = {Thomas Anderson and Adam Belay and Mosharaf Chowdhury and Asaf
+                  Cidon and Irene Zhang},
+  month =         7,
+  year =          2022,
+  booktitle = hotcarbon,
+  title =         {Treehouse: A Case For Carbon-Aware Datacenter Software},
+  url = {papers/treehouse-hotcarbon22.pdf},
+  abstract = {The end of Dennard scaling and the slowing of Moore's
+                  Law has put the energy use of datacenters on an
+                  unsustainable path. Datacenters are already a
+                  significant fraction of worldwide electricity use,
+                  with application demand scaling at a rapid rate. We
+                  argue that substantial reductions in the carbon
+                  intensity of datacenter computing are possible with
+                  a software-centric approach: by making energy and
+                  carbon visible to application developers on a
+                  fine-grained basis, by modifying system APIs to make
+                  it possible to make informed trade offs between
+                  performance and carbon emissions, and by raising the
+                  level of application programming to allow for
+                  flexible use of more energy efficient means of
+                  compute and storage. We also lay out a research
+                  agenda for systems software to reduce the carbon
+                  footprint of datacenter computing.}}
+                  
+
 
 @InProceedings{irene_demikernel_sosp,
   author = {Irene Zhang and Amanda Raybuck and Pratyush Patel and Kirk
