--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -78,7 +78,7 @@
                   talk = {https://youtu.be/DXnFrEBtYVk}}
 
 @InProceedings{max_sosp_persephone,
-  author = {Max Demoulin and Josh Fried and Isaac Pedisich and Marios
+  author = {Henri Maxime Demoulin and Joshua Fried and Isaac Pedisich and Marios
                   Kogias and Boon Thau Loo and Linh Thi Xuan Phan and
                   Irene Zhang},
   month =         10,
