--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -16,6 +16,25 @@
 @string{acsac = "Annual Computer Security Applications Conference (ACSAC)"}
 @string{hotcarbon = "Proceedings of the Workshop on Sustainable Computer Systems Design and Implementation (HotCarbon)"}
 
+@InProceedings{deepti_cornflakes_sosp,
+  author = {Deepti Raghavan and 
+Shreya Ravi and 
+Gina Yuan and
+Pratiksha Thaker and
+Sanjari Srivastava and
+Micah Murray and
+Pedro Henrique Penna and
+Amy Ousterhout and
+Philip Levis and
+Matei Zaharia and
+Irene Zhang
+ },
+  month =         10,
+  year =          2023,
+  booktitle = sosp,
+  title =         {Cornflakes: Zero-copy Serialization for Microsecond-scale Networking}}
+
+
 
 @InProceedings{treehouse_hotcarbon,
   author = {Thomas Anderson and Adam Belay and Mosharaf Chowdhury and Asaf
