--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -407,6 +407,15 @@
 \begin{rtable}
 
   \begin{rsection}{Service}
+    \begin{rentry}{NSDI, Program Chair}{2024}
+      \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{SOSP, DEI Chair}{2023}
+      \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{SIGOPS Dissertation Committee Chair}{2022}
+      \vspace{-0.5em}
+    \end{rentry}
     \begin{rentry}{VEE, Program Chair}{2021}
       \vspace{-0.5em}
     \end{rentry}
@@ -467,10 +476,7 @@
     \begin{rentry}{UW PoCSci, PC Chair}{2015-2016}
        \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{UW CSE Annual Women's Research Day}{}
-      \rline{Committee}{2017}
-      \rline{Chair}{2016}
-      \rline{Founder}{2015}
+    \begin{rentry}{UW CSE Annual Women's Research Day, Founder}{2015}
        \vspace{-0.5em}
     \end{rentry}
   \end{rsection}
@@ -555,7 +561,7 @@
 
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{Microsoft Research}{Redmond, WA}
-      \rline{Researcher, Systems Research Group} {Oct 2017 - current}
+      \rline{Principal Researcher, Systems Research Group} {Oct 2017 - current}
       \vspace{-.5em}
     \end{rentry}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
