--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -15,24 +15,66 @@
 @string{asplos = "Proceedings of the International Conference on Architectural Support for  Programming Languages and Operating Systems (ASPLOS)"}
 @string{acsac = "Annual Computer Security Applications Conference (ACSAC)"}
 @string{hotcarbon = "Proceedings of the Workshop on Sustainable Computer Systems Design and Implementation (HotCarbon)"}
+@string{apsys = "ACM SIGOPS Asia-Pacific Workshop on Systems (APSys)"}
 
+@InProceedings{inho_capybara_apsys,
+  author = {Inho Choi and 
+Nimish Wadekar and 
+Raj Joshi and 
+Joshua Fried and
+Dan R. K. Ports and
+Irene Zhang and
+Jialin Li},
+  month =         8,
+  year =          2023,
+  booktitle = apsys,
+  title = {Capybara: Microsecond-Scale Live TCP Migration},
+   url = {papers/capybara-apsys23.pdf},
+  abstract = {Latency-critical us-scale data center applications are
+                  susceptible to server load spikes. The issue is
+                  particularly challenging for services using
+                  long-lived TCP connections. This paper introduces
+                  Capybara, a highly efficient and versatile live TCP
+                  migration system. Capybara builds atop a
+                  deterministic, kernel-bypassed TCP stack running in
+                  a library OS to realize its us-scale TCP migration
+                  mechanism. Using modern programmable switches,
+                  Capybara implements migration-aware dynamic packet
+                  forwarding and transient packet buffering, further
+                  reducing system interference during live TCP
+                  migration. Capybara can transparently migrate a
+                  running TCP connection in 4 us on average. It
+                  improves the average migration host latency by about
+                  12 times compared to a Linux kernel-based solution.}}
+                  
 @InProceedings{deepti_cornflakes_sosp,
-  author = {Deepti Raghavan and 
-Shreya Ravi and 
-Gina Yuan and
-Pratiksha Thaker and
-Sanjari Srivastava and
-Micah Murray and
-Pedro Henrique Penna and
-Amy Ousterhout and
-Philip Levis and
-Matei Zaharia and
-Irene Zhang
- },
+  author = {Deepti Raghavan and Shreya Ravi and Gina Yuan and
+                  Pratiksha Thaker and Sanjari Srivastava and Micah
+                  Murray and Pedro Henrique Penna and Amy Ousterhout
+                  and Philip Levis and Matei Zaharia and Irene Zhang },
   month =         10,
   year =          2023,
   booktitle = sosp,
-  title =         {Cornflakes: Zero-copy Serialization for Microsecond-scale Networking}}
+  title =         {Cornflakes: Zero-copy Serialization for Microsecond-scale Networking},
+   url = {papers/cornflakes-sosp23.pdf},
+  abstract = { Data serialization is critical for many datacenter
+                  applications, but the memory copies required to move
+                  application data into packets are costly. Recent
+                  zero-copy APIs expose NIC scatter-gather
+                  capabilities, raising the possibility of offloading
+                  this data movement to the NIC. However, as the
+                  memory coordination required for scatter-gather
+                  adds bookkeeping overhead, scatter-gather is not
+                  always useful. We describe Cornflakes, a hybrid
+                  serialization library stack that uses scatter-gather
+                  for serialization when it improves performance and
+                  falls back to memory copies otherwise. We have
+                  implemented Cornflakes within a UDP and TCP
+                  networking stack, across Mellanox and Intel NICs. On
+                  a Twitter cache trace, Cornflakes achieves 15.4%
+                  higher throughput than prior software approaches on
+                  a custom key-value store and 8.8% higher throughput
+                  than Redis serialization within Redis.}}
 
 
 
